# context-engineering

./: LICENSE  README.md
use-cases/resource-prioritization/python/: README.md  pyproject.toml
use-cases/resource-prioritization/python/prompt/: prompt_template.md
use-cases/resource-prioritization/python/src/: context_generator.py
use-cases/work/python/: .gitignore  README.md
use-cases/work/python/data/: data.yaml
use-cases/work/python/prompt/: sample_data.json
use-cases/work/python/scripts/: demo.sh
