[project]
name = "context-generator"
version = "0.1.0"
description = "A CLI tool for filling Jinja2 prompt templates with JSON or YAML data"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "jinja2>=3.0.0",
    "pyyaml>=6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.uv]
dev-dependencies = []
